--- a/app/src/main/res/layout/activity_game_map.xml
+++ b/app/src/main/res/layout/activity_game_map.xml
@@ -16,180 +16,37 @@
             android:text="@string/btn_game_add_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="8dp"/>
+            android:textSize="9sp"/>
         <Button
             android:id="@+id/btn_game_back"
             android:text="@string/btn_game_back_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="8dp"/>
+            android:textSize="9sp"/>
         <Button
             android:id="@+id/btn_game_help"
             android:text="@string/btn_game_help_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="8dp"/>
+            android:textSize="9sp"/>
         <Button
             android:id="@+id/btn_game_clear"
             android:text="@string/btn_game_clear_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="8dp"/>
+            android:textSize="9sp"/>
         <Button
             android:id="@+id/btn_game_new"
             android:text="@string/btn_game_new_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="8dp"/>
+            android:textSize="9sp"/>
     </LinearLayout>
-
     <TableLayout
         android:id="@+id/table_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:stretchColumns="*"
         android:background="#E2E2E2">
-        <TableRow>
-            <TextView
-                android:text="1"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="2"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="3"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="4"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="5"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="6"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="7"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="8"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="9"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:text="1"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="0"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="1"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="1"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="1"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="2"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="1"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="3"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="1"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:text="4"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="1"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="5"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="1"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="6"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="1"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="7"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="1"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-            <TextView
-                android:text="8"
-                android:gravity="center"
-                android:background="#fff"
-                android:layout_margin="1dp"/>
-        </TableRow>
     </TableLayout>
-
 </LinearLayout>
